plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.example'
version = '0.0.2'

jar {
    enabled = false
}

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

ext {
    set('querydslVersion', "5.0.0")
    set('hibernateVersion', "6.1.0.Final")
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
//    runtimeOnly 'com.h2database:h2'
//    implementation 'com.h2database:h2'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testImplementation 'org.springframework.security:spring-security-test'
    implementation group: 'org.json', name: 'json', version: '20230227'
    compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
    // 유효성 검사
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
    // Querydsl 추가
    implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    // gson
    implementation 'com.google.code.gson:gson:2.8.7'
    // 명시적으로 Hibernate 6.x 추가
    implementation "org.hibernate.orm:hibernate-core:${hibernateVersion}"
    //webCrawl
    implementation 'org.jsoup:jsoup:1.14.3'
    implementation 'org.seleniumhq.selenium:selenium-java:4.9.0'
    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.25.0'

}

tasks.named('bootBuildImage') {
    builder = 'paketobuildpacks/builder-jammy-base:latest'
}

tasks.named('test') {
    useJUnitPlatform()
}
